# cpp-minter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RELEASE.md  conanfile.py  conanfile.txt  dockerpack.yml  merge_libs.sh  publish_local.sh  publish_remote.sh
.circleci/: conan_deps.sh  config.yml  deploy.sh  deploy_win.bat  package.sh  setup.sh  test.sh
cfg/: minter_tx-config.cmake.in  minter_tx.pc.in  minter_tx_config.h.in  minter_tx_core.h.in  package_make.sh  package_upload.sh
examples/: generate_mnemonic.cpp  make_send_tx.cpp
examples/generate/: CMakeLists.txt  README.md  conanfile.py  conanfile.txt  main.cpp
examples/minter-pretty/: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  main.cpp
examples/tx-send/: CMakeLists.txt  conanfile.txt  main.cpp
include/minter/: address.h  check.h  hash.h  private_key.h  public_key.h  tx.hpp
include/minter/crypto/: cxx_secp256k1.h
include/minter/eth/: Common.h  CommonData.h  FixedHash.h  RLP.h  common.h  exceptions.h  types.h  vector_ref.h
include/minter/tx/: check_tx.h  rlp_encodable.h  secp256k1_raii.h  signature.h  signature_data.h  tx.h  tx_add_limited_order.h  tx_add_liquidity.h  tx_builder.h  tx_burn_token.h  tx_buy_coin.h  tx_buy_swap_pool.h  tx_create_coin.h  tx_create_multisig_address.h  tx_create_swap_pool.h  tx_create_token.h  tx_data.h  tx_declare_candidacy.h  tx_deeplink.h  tx_delegate.h  tx_edit_candidate.h  tx_edit_candidate_commission.h  tx_edit_candidate_public_key.h  tx_edit_coin_owner.h  tx_edit_multisig.h  tx_fwd.h  tx_mint_token.h  tx_multisend.h  tx_price_vote.h  tx_recreate_coin.h  tx_recreate_token.h  tx_redeem_check.h  tx_remove_limited_order.h  tx_remove_liquidity.h  tx_sell_all_coins.h  tx_sell_all_swap_pool.h  tx_sell_coin.h  tx_sell_swap_pool.h  tx_send_coin.h  tx_set_candidate_on_off.h  (+6 more)
libs/uint256/: CMakeLists.txt
modules/: CodeCoverage.cmake  ConanBuild.cmake  ConanInit.cmake  FindLinuxPlatform.cmake  PVS-Studio.cmake  package.cmake  packaging.cmake
src/: mintex.h  utils.cpp
src/data/: address.cpp  check.cpp  hash.cpp  private_key.cpp  public_key.cpp
src/eth/: Common.cpp  CommonData.cpp  FixedHash.cpp  RLP.cpp  common.cpp
src/tx/: check_tx.cpp  signature_data.cpp  tx.cpp  tx_add_limited_order.cpp  tx_add_liquidity.cpp  tx_builder.cpp  tx_burn_token.cpp  tx_buy_coin.cpp  tx_buy_swap_pool.cpp  tx_create_coin.cpp  tx_create_multisig_address.cpp  tx_create_swap_pool.cpp  tx_create_token.cpp  tx_data.cpp  tx_declare_candidacy.cpp  tx_deeplink.cpp  tx_delegate.cpp  tx_edit_candidate.cpp  tx_edit_candidate_commission.cpp  tx_edit_candidate_public_key.cpp  tx_edit_coin_owner.cpp  tx_edit_multisig.cpp  tx_mint_token.cpp  tx_multisend.cpp  tx_price_vote.cpp  tx_recreate_coin.cpp  tx_recreate_token.cpp  tx_redeem_check.cpp  tx_remove_limited_order.cpp  tx_remove_liquidity.cpp  tx_sell_all_coins.cpp  tx_sell_all_swap_pool.cpp  tx_sell_coin.cpp  tx_sell_swap_pool.cpp  tx_send_coin.cpp  tx_set_candidate_on_off.cpp  tx_set_halt_block.cpp  tx_type.cpp  tx_unbond.cpp  tx_vote_commission.cpp  (+1 more)
tests/: address_test.cpp  check_tx_test.cpp  main.cpp  priv_key_test.cpp  pub_key_test.cpp  rlp_test.cpp  test_allocator.cpp  tx_buy_coin_test.cpp  tx_check_test.cpp  tx_create_coin_test.cpp  tx_create_multisig_address_test.cpp  tx_declare_candidacy_test.cpp  tx_deeplink_test.cpp  tx_delegate_test.cpp  tx_edit_candidate_commission_test.cpp  tx_edit_candidate_public_key_test.cpp  tx_edit_candidate_test.cpp  tx_edit_coin_owner_test.cpp  tx_edit_multisig_test.cpp  tx_limited_order_test.cpp  tx_liquidity_add_remove_test.cpp  tx_multisend_test.cpp  tx_multisig_test.cpp  tx_recreate_coin_test.cpp  tx_redeem_check_test.cpp  tx_sell_coin_test.cpp  tx_send_test.cpp  tx_set_candidate_on_off.cpp  tx_set_halt_block_test.cpp  tx_swap_pool_test.cpp  tx_token_test.cpp  utils_test.cpp
